--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -3,12 +3,10 @@
 
 name: Upload Python Package
 
-on: [push]
-
-# on:
-#   push:
-#     branches:
-#       - develop
+on:
+  push:
+    branches:
+      - develop
 
 permissions:
   contents: read
@@ -38,11 +36,10 @@ jobs:
     - name: Publish package
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
+        TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
       run: |
         twine check dist/*.tar.gz
         twine upload \
           --skip-existing \
           --verbose \
-          --repository testpypi \
           dist/*.tar.gz
