use changelog2version package for version file generation

--- a/requirements-deploy.txt
+++ b/requirements-deploy.txt
@@ -2,9 +2,7 @@
 # Avoid fixed versions
 # # to upload package to PyPi or other package hosts
 twine>=4.0.1,<5
-
-# to parse changelog semver
-semver>=2.13.0,<3
+changelog2version>=0.5.0,<1
 
 # # to convert markdown to reStructuredText
 # m2rr>=0.2.3,<1
