--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,19 +15,13 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    # strategy:
-    #   fail-fast: false
-    #   matrix:
-    #     python-version: ["3.8", "3.9", "3.10"]
-
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        # python-version: ${{ matrix.python-version }}
         python-version: '3.9'
     - name: Install dependencies
       run: |
@@ -63,9 +57,10 @@ jobs:
         if [ -f requirements-deploy.txt ]; then pip install -r requirements-deploy.txt; fi
     - name: Build package
       run: |
-        python update_version.py \
+        changelog2version \
           --changelog_file changelog.md \
           --version_file nextion/version.py \
+          --version_file_type py \
           --debug
         python setup.py sdist
     - name: Test build package
