deploy package as be-micropython-nextion on every PR to test.pypi.org as micropython-nextion is not owned by me there

--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -29,6 +29,11 @@ jobs:
           --version_file_type py \
           --additional_version_info="-rc${{ github.run_number }}.dev${{ github.event.number }}" \
           --debug
+        # micropython-nextion is owned by someone else on test.pypi.org
+        # rename package only for this case
+        sed -i \
+          "s/name\='micropython-nextion'/name\='be-micropython-nextion'/" \
+          setup.py
         python setup.py sdist
     - name: Test built package
       # sdist call creates non twine conform "*.orig" files, remove them
