--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,12 +33,7 @@ jobs:
           python -m pip install flake8
       - name: Lint with flake8
         run: |
-          # remove old reports folder and create new one
-          rm -rf reports
-          mkdir -p reports/sca
-          mkdir -p reports/test_results
-          mkdir -p reports/coverage
-          flake8 . --output-file=reports/sca/flake8.out --exit-zero
+          flake8 .
       # - name: Test with pytest
       #   run: |
       #     python -m pip install pytest
