--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,13 +27,15 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: '3.9'
-      - name: Install dependencies
+      - name: Install test dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8
+          pip install -r requirements-test.txt
       - name: Lint with flake8
         run: |
           flake8 .
+      - name: Lint with yamllint
+        run: |
+          yamllint .
       # - name: Test with pytest
       #   run: |
       #     python -m pip install pytest
