--- a/.github/workflows/test-release.yaml
+++ b/.github/workflows/test-release.yaml
@@ -8,7 +8,7 @@ name: Upload Python Package to test.pypi.org
 on: [pull_request]
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   test-deploy:
