--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,6 +34,11 @@ jobs:
             --version_file nextion/version.py \
             --version_file_type py \
             --debug
+          # micropython-nextion is owned by someone else on test.pypi.org
+          # rename package only for this case
+          sed -i \
+            "s/name\='micropython-nextion'/name\='be-micropython-nextion'/" \
+            setup.py
           python setup.py sdist
           rm dist/*.orig
         # sdist call create non conform twine files *.orig, remove them
