--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,3 +68,10 @@ jobs:
       - name: Test build package
         run: |
           twine check dist/*
+      - name: Validate mip package file
+        run: |
+          upy-package \
+            --setup_file setup.py \
+            --package_changelog_file changelog.md \
+            --package_file package.json \
+            --validate
