--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,14 +34,12 @@ jobs:
             --version_file nextion/version.py \
             --version_file_type py \
             --debug
-          # micropython-nextion is owned by someone else on test.pypi.org
-          # rename package only for this case
-          sed -i \
-            "s/name\='micropython-nextion'/name\='be-micropython-nextion'/" \
-            setup.py
           python setup.py sdist
+      - name: Test built package
+        # sdist call creates non twine conform "*.orig" files, remove them
+        run: |
           rm dist/*.orig
-        # sdist call create non conform twine files *.orig, remove them
+          twine check dist/*.tar.gz
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1.5
         with:
